crates/stef-go/tests/snapshots/render__render@types_nested.stef.snap
---
source: crates/stef-go/tests/render.rs
description: "struct Sample {\n    value: vec<option<non_zero<hash_map<i64, box<string>>>>> @1,\n}"
input_file: crates/stef-parser/tests/inputs/types_nested.stef
---
--- sample.go

// Code generated by stef-go (v0.1.0). DO NOT EDIT.

import (
	"github.com/dnaka91/stef-go"
	"github.com/dnaka91/stef-go/buf"
)

package sample

type Sample struct {
	Value []*stef.NonZeroHashMap[int64, string]
}

func NewSample(
	value []*stef.NonZeroHashMap[int64, string],
) Sample {
	return Sample{
		Value: value,
	}
}

var _ buf.Encode = (*Sample)(nil)

func (v *Sample) Encode(w []byte) []byte {
	w = buf.EncodeField(w, 1, func (w []byte) []byte {
		return buf.EncodeVec[*stef.NonZeroHashMap[int64, string]](w, v.Value, func(w []byte, v *stef.NonZeroHashMap[int64, string]) []byte {
			return buf.EncodeOption[stef.NonZeroHashMap[int64, string]](w, v, func(w []byte, v stef.NonZeroHashMap[int64, string]) []byte {
				return buf.EncodeHashMap[int64, string](
					w, v.Get(),
					func(w []byte, k int64) []byte {
						return buf.EncodeI64(w, k)
					},
					func(w []byte, v string) []byte {
						return buf.EncodeString(w, v)
					},
				)
			})
		})
	})
	w = buf.EncodeU32(w, buf.EndMarker)
	return w
}

var _ buf.Decode = (*Sample)(nil)

func (v *Sample) Decode(r []byte) ([]byte, error) {
	foundValue := false

	for len(r) > 0 {
		r2, id, err := buf.DecodeID(r)
		if err != nil {
			return nil, err
		}
		r = r2

		switch id {
			case 1:
				r2, value, err := buf.DecodeVec[*stef.NonZeroHashMap[int64, string]](r, func(r []byte) ([]byte, *stef.NonZeroHashMap[int64, string], error) {
					return buf.DecodeOption[stef.NonZeroHashMap[int64, string]](r, func(r []byte) ([]byte, stef.NonZeroHashMap[int64, string], error) {
						return buf.DecodeNonZeroHashMap[int64, string](
							r,
							func(r []byte) ([]byte, int64, error) {
								return buf.DecodeI64(r)
							},
							func(r []byte) ([]byte, string, error) {
								return buf.DecodeString(r)
							},
						)
					})
				})
				if err != nil {
					return nil, err
				}
				r = r2
				v.Value = value
				foundValue = true
			case buf.EndMarker:
				break
		}
	}

	if !foundValue {
		return nil, buf.MissingFieldError{
			ID:    1
			Field: "value"
		}
	}

	return r, nil
}


